--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+//this was all the css i needed
 .design {
     background-image: url('http://fc07.deviantart.net/fs42/f/2009/145/4/1/41c4ca9ab68a3856eceda593468300b7.jpg');
     background-size: cover;
